# CDIO-Gruppe-15

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  mainpage.dox  manifest.xml  manifest.xml~
flight_20170617_131835/: userbox_1497705515
include/: circle_finder.hpp  qr_reader.hpp
msg/: circle_msg.msg  send_circle.msg  send_qr.msg
msg_gen/cpp/include/CDIO/: chapter2_msg1.h  circle.h  circle_msg.h  send_circle.h  send_qr.h
msg_gen/lisp/: CDIO-msg.asd  _package.lisp  _package_chapter2_msg1.lisp  _package_circle.lisp  _package_send_circle.lisp  _package_send_qr.lisp  chapter2_msg1.lisp  circle.lisp  circle_msg.lisp  send_circle.lisp  send_qr.lisp
src/: test_cv.cpp
src/CDIO/msg/: __init__.py  _chapter2_msg1.py  _circle.py  _circle_msg.py  _send_circle.py  _send_qr.py
src/CDIO/srv/: _Get_battery_srv.py  __init__.py  _chapter2_srv1.py
src/Final_Project/: Drone_controllor.cpp  Drone_controllor.h  main.cpp
src/Fly/: fly.cpp
src/Get_Battery/: get_battery.cpp  get_battery.cpp~
src/Martins_fun/: circle_finder2.cpp  martin_fun.cpp  test_off_alti.cpp
src/Nav_Circle/: drone_fly_5.cpp
src/exampler/: example1_b.cpp~  example2_a.cpp~  example2_b.cpp~  example3_a.cpp  example3_b.cpp
src/examples/: example2_a.cpp  example2_b.cpp
src/final_project/: backup.txt  circle_finder.cpp  drone_fly.cpp  drone_fly_2.cpp  drone_fly_3.cpp  drone_fly_4.cpp  drone_main.cpp  main.cpp  qr_reader.cpp  splittest.cpp  square_finder.cpp  square_finder.cpp~
src/openCV/: image.cpp  qr_reader.cpp  qr_reader.cpp~  test.cpp
src/opencv/: test.cpp
src/opencv_circle/: CMakeLists.txt  DisplayImage.cpp  edge.cpp  my_tracking (copy).cpp  my_tracking.cpp
src/opencv_squars/: CMakeLists.txt  square (kopi).cpp  square.cpp  square.cpp~  square3.cpp
src/test/FlyPath/: FlyPath1.cpp  FlyPath2.cpp
src/test/FromTheInternet/: ARDrone_manual_test.cpp
src/test/Get_Battery/: get_battery.cpp
src/test/Image/: image.cpp  image2.cpp  image_converter.cpp  test_cv.cpp
src/test/Multithred/: multithred.cpp  multithred.h
srv/: Get_battery_srv.srv  chapter2_srv1.srv~
srv_gen/cpp/include/CDIO/: Get_battery_srv.h  chapter2_srv1.h
srv_gen/lisp/: CDIO-srv.asd  Get_battery_srv.lisp  _package.lisp  _package_Get_battery_srv.lisp  _package_chapter2_srv1.lisp  chapter2_srv1.lisp
